# Master

applications/ContactMechanicsApplication/custom_python/: add_custom_utilities_to_python.h
applications/FluidDynamicsApplication/tests/: EmbeddedCouetteTest_local_process.py
applications/MultiphaseApplication/: CMakeLists.txt  MultiphaseApplication.py  multiphase_application.cpp  multiphase_application.h  porous_media_application_variables.cpp  porous_media_application_variables.h
applications/MultiphaseApplication/custom_conditions/: massflow.cpp  sinksourcenonfem.cpp  sinksourcenonfem.h  sinksourcepressure.cpp
applications/MultiphaseApplication/custom_elements/: flowpressuretrans_2d.cpp  multiphasefem.cpp  multiphasefem.h
applications/MultiphaseApplication/custom_python/: add_custom_strategies_to_python.cpp  add_custom_strategies_to_python.h  add_custom_utilities_to_python.cpp  add_custom_utilities_to_python.h  multiphase_python_application.cpp
applications/MultiphaseApplication/custom_strategies/: fractional_iterative_configuration.h  fractional_iterative_strategy.h  sequential_multiphase_fem_configuration.h  sequential_multiphase_fem_strategy.h  solver_strategy_configuration.h
applications/MultiphaseApplication/custom_utilities/: bfecc_convection.h  bfecc_convection_2.h  bfecc_convection_3.h  spanWagner.xml  spanwagnereos.h
applications/MultiphaseApplication/python_scripts/: fractional_iterative_solver.py  sequential_multiphase_fem_solver.py
